[package]
name = "keepass-import-export"
authors = ["louib <code@louib.net>"]

version = "0.1.0"
edition = "2021"

repository = "https://github.com/louib/keepass-import-export/"
description = "CLI tools to export to and import from KDBX (keepass) databases"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[[bin]]
name = "keepass-export"

[dependencies]
clap = { version = "4", features = ["derive"] }
rpassword = { version = "7" }
anyhow = { version = "1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Formats
# keepass = { version = "0.6", features = ["save_kdbx4", "totp"] }
aegis-vault = "*"

[dependencies.keepass]
git = "https://github.com/sseemayer/keepass-rs"
branch = "public-totp-fields"
# path = "../keepass-rs"
features = ["save_kdbx4", "totp"]
